CSS updated for the form

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           placeholder="confirm password"
         />
         <input type="checkbox" name="tandc" id="tandc" />
-        <input typer="submit" />
+        <input type="submit" class="form-button" />
         <hr />
         <h2>download the app</h2>
         <div class="link-container">
