Completed Auth Modal

--- a/index.html
+++ b/index.html
@@ -34,16 +34,22 @@
           id="password-check"
           placeholder="confirm password"
         />
-        <input type="checkbox" name="tandc" id="tandc" />
+        <label for="tandc">
+          <input type="checkbox" name="tandc" id="tandc" />
+          I agree to the terms and conditions.
+        </label>
         <input type="submit" class="form-button" />
         <hr />
         <h2>download the app</h2>
         <div class="link-container">
           <a href="http://play.google.com/store">
-            <img src="" alt="google play icon" />
+            <img
+              src="/images/google-play-download.png"
+              alt="google play icon"
+            />
           </a>
           <a>
-            <img src="https://www.apple.com/store" alt="apple store icon" />
+            <img src="/images/app-store-download.png" alt="apple store icon" />
           </a>
         </div>
       </form>
